# docker-wrapper

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLEANUP_PROGRESS.md  CLIPPY_FIXES.md  COMPARISON.md  CONTRIBUTING.md  Cargo.toml  DOCKER_CLI_GAP_ANALYSIS.md  DOCKER_COMMANDS_REFERENCE.md  DOCKER_COMMAND_COVERAGE.md  LICENSE-MIT  README.md  RESTART_CONTEXT.md  SESSION-CONTEXT.md  cliff.toml  high_level_design_summary.md  release-please-config.json  release-plz.toml  technical_code_consolidation.rs
.claude/: CLAUDE-CONTEXT-SYSTEM.md  CLAUDE_INSTRUCTIONS.md  CONTEXT.md  PROJECT_CONTEXT.md  SESSION-CONTEXT.md  adr-helper.sh  adr-index.toml
.claude/branches/arch/: comprehensive-ci-cd-pipeline.md
.claude/branches/docs/: development-environment-setup.md  project-status-and-readiness.md  publication-and-release-strategy.md
.claude/templates/: adr-template.md
.github/: dependabot.yml
.github/workflows/: changelog.yml  ci.yml  dependencies.yml  quick-check.yml  release-please.yml  release-plz.yml  release.yml
docs/: DEVELOPMENT_RESET_SUMMARY.md  DOCKER_COMMAND_COVERAGE.md  PORT_MAPPING_INVESTIGATION.md  SPRINT_1_CONTEXT.md  TASK_LIST.md  TEMPLATES.md  TEMPLATE_EXTRACTION_PLAN.md  TESTING.md  development-context.md  feature-test-matrix.md  test-redis-command-matrix.md
examples/: basic_docker_patterns.rs  basic_usage.rs  complete_run_coverage.rs  container_management.rs  debugging_features.rs  docker_compose.rs  ecosystem_management.rs  exec_examples.rs  init_command.rs  lifecycle_commands.rs  monitoring_and_events.rs  network_volume_management.rs  phase2_demo.rs  phase3_showcase.rs  phase4_showcase.rs  platform_detection.rs  port_mapping_example.rs  redis_cluster.rs  redis_enterprise.rs  redis_enterprise_template.rs  run_examples.rs  streaming.rs  streaming_test.rs  system_cleanup.rs  template_showcase.rs  template_usage.rs  test_fixtures.rs  test_sentinel.rs  testing_basics.rs  testing_utilities.rs  toxiproxy_fault_injection.rs
examples/redis-dev/: CHANGELOG.md  Cargo.toml  DESIGN.md  README.md
examples/redis-dev/src/: cli.rs  config.rs  lib.rs  main.rs
examples/redis-dev/src/commands/: basic.rs  cluster.rs  enterprise.rs  insight.rs  list.rs  logs.rs  mod.rs  sentinel.rs  stack.rs
examples/redis-dev/tests/: deployment_integration.rs  integration_test.rs  mod.rs  unit_tests.rs
src/: bake.rs  build.rs  client.rs  command.rs  compose.rs  debug.rs  error.rs  errors.rs  events.rs  exec.rs  executor.rs  image.rs  images.rs  info.rs  lib.rs  login.rs  logout.rs  network.rs  platform.rs  prerequisites.rs  ps.rs  pull.rs  push.rs  run.rs  search.rs  stats.rs  stream.rs  template.rs  testing.rs  tracing_compat.rs  types.rs  utils.rs  version.rs  volume.rs
src/command/: attach.rs  bake.rs  build.rs  builder.rs  commit.rs  compose.rs  compose_attach.rs  compose_build.rs  compose_config.rs  compose_convert.rs  compose_cp.rs  compose_create.rs  compose_down.rs  compose_events.rs  compose_exec.rs  compose_images.rs  compose_kill.rs  compose_logs.rs  compose_ls.rs  compose_pause.rs  compose_port.rs  compose_ps.rs  compose_push.rs  compose_restart.rs  compose_rm.rs  compose_run.rs  compose_scale.rs  compose_start.rs  compose_stop.rs  compose_top.rs  compose_unpause.rs  compose_up.rs  compose_version 2.rs  compose_version.rs  compose_wait.rs  compose_watch 2.rs  compose_watch.rs  container_prune.rs  cp.rs  create.rs  (+42 more)
src/command/builder/: build.rs  create.rs  inspect.rs  ls.rs  mod.rs  prune.rs  rm.rs  stop.rs  use_cmd.rs
src/command/compose/: attach.rs  build.rs  config.rs  convert.rs  cp.rs  create.rs  down.rs  events.rs  exec.rs  images.rs  kill.rs  logs.rs  ls.rs  pause.rs  port.rs  ps.rs  pull.rs  push.rs  restart.rs  rm.rs  run.rs  scale.rs  start.rs  stop.rs  top.rs  unpause.rs  up.rs  version.rs  wait.rs  watch.rs
src/command/context/: create.rs  inspect.rs  ls.rs  mod.rs  rm.rs  update.rs  use_context.rs
src/command/manifest/: annotate.rs  create.rs  inspect.rs  push.rs  rm.rs
src/command/network/: connect.rs  create.rs  disconnect.rs  inspect.rs  ls.rs  prune.rs  rm.rs
src/command/swarm/: ca.rs  init.rs  join.rs  join_token.rs  leave.rs  mod.rs  unlock.rs  unlock_key.rs  update.rs
src/command/system/: df.rs  prune.rs
src/compose/: attach.rs  build.rs  config.rs  convert.rs  cp.rs  create.rs  down.rs  events.rs  exec.rs  images.rs  kill.rs  logs.rs  ls.rs  pause.rs  port.rs  ps.rs  push.rs  restart.rs  rm.rs  run.rs  scale.rs  start.rs  stop.rs  top.rs  unpause.rs  up.rs  version.rs  wait.rs  watch.rs
src/container/: exec.rs  health.rs  logs.rs  mod.rs
src/template/: database.rs  mod.rs  mongodb.rs  mysql.rs  nginx.rs  postgres.rs  redis.rs  toxiproxy.rs
src/template/database/: mongodb.rs  mysql.rs  postgres.rs
src/template/redis/: basic.rs  cluster.rs  common.rs  enterprise.rs  insight.rs  mod.rs  sentinel.rs
src/template/web/: mod.rs  nginx.rs
tests/: bake_integration.rs  build_integration.rs  command_execution_test.rs  common_commands_integration.rs  compose_commands_integration.rs  container_guard_integration.rs  container_lifecycle_integration.rs  container_unit_tests.rs  context_integration.rs  database_template_integration.rs  exec_integration.rs  image_tests.rs  images_integration.rs  info_integration.rs  integration_tests.rs  lifecycle_integration.rs  login_integration.rs  logout_integration.rs  network_integration.rs  network_tests.rs  phase2_integration.rs  property_tests.proptest-regressions  property_tests.rs  ps_integration.rs  pull_integration.rs  push_integration.rs  redis_cluster_integration.rs  redis_exec_validation.rs  redis_sentinel_integration.rs  redis_template_integration.rs  redis_tls_integration.rs  run_integration.rs  search_integration.rs  system_integration.rs  toxiproxy_integration.rs  tracing_instrumentation.rs  version_integration.rs  volume_integration.rs  volume_tests.rs
