[package]
name = "docker-wrapper"
version = "0.2.0"
edition = "2021"
rust-version = "1.78.0"
authors = ["Josh Rotenberg <joshrotenberg@gmail.com>"]
description = "A Docker CLI wrapper for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshrotenberg/docker-wrapper"
readme = "README.md"
keywords = ["docker", "containers", "cli", "wrapper"]
categories = ["development-tools", "api-bindings"]
homepage = "https://github.com/joshrotenberg/docker-wrapper"
documentation = "https://docs.rs/docker-wrapper"

[features]
default = []
compose = []

[dependencies]
tokio = { version = "1.46", features = [
    "process",
    "rt-multi-thread",
    "macros",
    "time",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
tempfile = "3.0"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "exec_examples"
path = "examples/exec_examples.rs"

[[example]]
name = "basic_docker_patterns"
path = "examples/basic_docker_patterns.rs"
