[workspace]
resolver = "2"

[package]
name = "docker-wrapper"
version = "0.11.3"
edition = "2021"
rust-version = "1.88.0"
authors = ["Josh Rotenberg <joshrotenberg@gmail.com>"]
description = "A Docker CLI wrapper for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshrotenberg/docker-wrapper"
readme = "README.md"
keywords = ["docker", "containers", "cli", "wrapper"]
categories = ["development-tools", "api-bindings"]
homepage = "https://github.com/joshrotenberg/docker-wrapper"
documentation = "https://docs.rs/docker-wrapper"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["compose", "swarm", "manifest", "tracing"]
compose = []
swarm = []
manifest = []
# Emit `tracing` spans/events from command execution paths.
# Enabled by default; disable with --no-default-features to compile out.
tracing = ["dep:tracing"]

# Template features
templates = [
    "template-redis",
    "template-redis-cluster",
    "template-redis-enterprise",
    "template-postgres",
    "template-mysql",
    "template-mongodb",
    "template-nginx",
    "template-toxiproxy",
]

# Individual template features
template-redis = ["reqwest"]
template-redis-enterprise = ["reqwest"]
template-redis-cluster = ["reqwest"]
template-postgres = ["reqwest"]
template-mysql = ["reqwest"]
template-mongodb = ["reqwest"]
template-nginx = ["reqwest"]
# Toxiproxy fault-injection template (talks to the :8474 control API over HTTP).
template-toxiproxy = ["reqwest"]

# Future Redis variants
template-redis-sentinel = ["template-redis"]
template-redis-stack = ["template-redis"]

# Testing utilities (requires at least one template feature)
testing = ["template-redis"]

[dependencies]
tokio = { version = "1.46", features = [
    "process",
    "rt-multi-thread",
    "macros",
    "time",
    "io-util",
    "sync",
    "net",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = { version = "0.1", optional = true }
async-trait = "0.1"

# Optional dependencies for templates
reqwest = { version = "0.12", features = ["json", "rustls-tls"], optional = true }

# Cross-platform binary lookup
which = "8.0"

[dev-dependencies]
tokio-test = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-test = { version = "0.2", features = ["no-env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
tempfile = "3.0"
which = "8.0"
serde_json = "1.0"
proptest = "1.6"
serial_test = "3.3.1"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "exec_examples"
path = "examples/exec_examples.rs"

[[example]]
name = "basic_docker_patterns"
path = "examples/basic_docker_patterns.rs"

[[example]]
name = "network_volume_management"
path = "examples/network_volume_management.rs"

[[example]]
name = "template_usage"
path = "examples/template_usage.rs"
required-features = ["templates"]

[[example]]
name = "redis_cluster"
path = "examples/redis_cluster.rs"
required-features = ["template-redis-cluster"]

[[example]]
name = "redis_enterprise_template"
path = "examples/redis_enterprise_template.rs"
required-features = ["template-redis-enterprise"]

[[example]]
name = "test_sentinel"
path = "examples/test_sentinel.rs"
required-features = ["template-redis"]

[[example]]
name = "toxiproxy_fault_injection"
path = "examples/toxiproxy_fault_injection.rs"
required-features = ["template-toxiproxy", "template-redis", "testing"]
